turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:15: error: type mismatch;
 found   : java.awt.Color
 required: Int
	setCouleurSol(colors(rule(state)(couleurSol)(0)));	
                                         ^Turmite:35: error: type mismatch;
 found   : java.awt.Color
 required: Int
	state = rule(state)(couleurSol)(2);
                            ^